--- a/style.css
+++ b/style.css
@@ -44,8 +44,102 @@ a {
     font-size: 14px;
     margin: 5px 8px;
     padding-right: 5px;
+    position: relative;
 }
 
 .navbar-center ul li a img {
     width: 30px;
+}
+
+.navbar-center ul li a::after {
+    content: '';
+    width: 0;
+    height: 2px;
+    background: #045be6;
+    position: absolute;
+    bottom: -15px;
+    transition: width 0.3s;
+}
+
+.navbar-center ul li a:hover::after,
+.navbar-center ul li a.active-link::after {
+    width: 100%;
+}
+
+.nav-profile-img {
+    width: 40px;
+    border-radius: 50%;
+    display: block;
+    cursor: pointer;
+    position: relative;
+}
+
+.online {
+    position: relative;
+}
+
+.online::after {
+    content: '';
+    width: 7px;
+    height: 7px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    right: 0;
+    top: 0;
+    background: #41db51;
+    position: absolute;
+}
+
+.search-box {
+    background: #f0f2f5;
+    width: 250px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+}
+
+.navbar-left {
+    display: flex;
+    align-items: center;
+}
+
+.search-box img {
+    width: 14px;
+
+}
+
+.search-box input {
+    width: 100%;
+    background: transparent;
+    padding: 8px;
+    outline: none;
+    border: 0;
+}
+
+/*-------------- navbar end-------------------*/
+
+.conatainer {
+    padding: 20px 6%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+/*-------------- left-sidebar -------------------*/
+.left-sidebar {
+    flex-basis: 25%;
+    align-self: flex-start;
+}
+
+/*-------------- right-sidebar -------------------*/
+
+.right-sidebar {
+    flex-basis: 25%;
+    align-self: flex-start;
+}
+
+/*-------------- main-content -------------------*/
+.main-content {
+    flex-basis: 47%;
 }
